--- a/css3houdai.html
+++ b/css3houdai.html
@@ -3,9 +3,37 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>css3后代选择器练习</title>
+	<style>
+	.list li:only-child{
+		background:red;
+	}
+	.list li:nth-child(2n){
+		background:blue;
+	}
+	.list li:nth-child(2n-1){
+		background:pink;
+	}
+	.list li:nth-child(3n){
+		background:yellow;
+	}
+	:root{
+		border: 2px solid red
+	}
+	.list li:empty{
+		height:50px;
+		background: red
+	}
+	.list li:first-child{
+		background:purple;
+	}
+	.list li:last-child{
+		background: green
+	}
+	</style>
 </head>
 <body>
-	<ul>
+
+	<ul class="list">
 		<li>01</li>
 		<li>02</li>
 		<li>03</li>
@@ -17,8 +45,10 @@
 		<li>09</li>
 		<li>10</li>
 	</ul>
-	<ul>
+	<ul class="list">
 		<li>11</li>
+		<li></li>
+		<li></li>
 	</ul>
 </body>
 </html>
